# ContextHub

./: .gitignore  CLAUDE.md  README.md  folder.yml  project_setup.txt
services/auth_service/: .env.example  README.md  pyproject.toml
services/auth_service/alembic/: env.py
services/auth_service/alembic/versions/: 2b5d8775906b_intial_migration_for_users_.py  b0354078d0ec_intial_migration.py  d81227afaf14_intial_migration_for_users_.py
services/auth_service/keys/: README.md
services/auth_service/src/auth_service/: main.py
services/auth_service/src/auth_service/config/: settings.py
services/auth_service/src/auth_service/const/: organization_role_enum.py  otp_types_enum.py
services/auth_service/src/auth_service/db/: session.py
services/auth_service/src/auth_service/dependencies/: db.py
services/auth_service/src/auth_service/models/: __init__.py  organization_membership.py  organization_model.py  otp_model.py  refresh_token_model.py  user_model.py
services/organization_service/: .env.example  README.md  pyproject.toml
services/organization_service/alembic/: env.py
services/organization_service/alembic/versions/: 26216aaaaad0_intial_migration.py  5ca36b2b00eb_add_deleted_at_field_for_organization.py  6b159f8be92f_modifies_org_model_to_make_used_at_.py  6f73be456f4f_add_invited_user_id_to_org_invitations.py  b3723c5c532b_made_is_new_user_field_in_organization_.py  c11bf5746499_modifies_org_invitation_model.py  fedfe6461ecb_intial_migration.py
services/organization_service/keys/: README.md
services/organization_service/src/organization_service/: main.py
(+84 files in other folders)
