[project]
name = "contexthub-organization-service"
version = "0.1.0"
description = ""
authors = [
    {name = "MarutiBandagar9121",email = "marut.bandagar9121@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.137.2,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "organization_service", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
